@@ -7,6 +7,7 @@ V8.xx (xx.xx.2023)
   - this check can be skipped by enabling the property "skipPathCheckAtStartup" in the Preferences
  -added a context-menu to the resources-dialog for editing text (copy, cut, paste)
  -made the properties-editor in the Preferences-window more accessible, increased the size of the button for selecting folders
+ -alphabetic sorting of gradients and scripts inside of their tree-views
  -removed the parameters "X" and "Y" of "circleLinear" which were never used
  -removed the parameter "scale_t" of "heart_wf" which was never used
 
